--- a/package.json
+++ b/package.json
@@ -9,13 +9,23 @@
   "license": "MIT",
   "scripts": {
     "predev": "yarn build",
-    "dev": "node server/build",
-    "build": "tsc -p server/tsconfig.json"
+    "dev": "dotenv -e server/.env node server/build",
+    "lint": "tslint -c tslint.json \"server/src/**/*.ts\"",
+    "build": "tsc -p tsconfig.json"
   },
   "dependencies": {
+    "express": "^4.17.1",
+    "express-graphql": "^0.8.0",
+    "graphql": "^14.3.1",
+    "graphql-relay": "^0.6.0",
     "typescript": "^3.5.1"
   },
   "devDependencies": {
-    "@types/node": "^12.0.4"
+    "@types/express": "^4.16.1",
+    "@types/express-graphql": "^0.8.0",
+    "@types/graphql": "^14.2.0",
+    "@types/graphql-relay": "^0.4.9",
+    "@types/node": "^12.0.4",
+    "tslint": "^5.17.0"
   }
 }
