--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "compilerOptions": {
-    "types": ["node"],
     "module": "commonjs",
-    "target": "es2017",
-    "outDir": "build"
+    "target": "es6",
+    "outDir": "server/build"
   },
   "exclude": [
     "node_modules"
