--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "webpack-dev-server --config ./webpack.config.js --mode development",
-    "relay": "relay-compiler --src ./src --schema ./src/relay/schema.graphql"
+    "relay": "relay-compiler --src ./src --schema ./src/relay/schema.graphql",
+    "lint": "eslint \"{src/**/*.js,}\" --quiet"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -14,6 +15,10 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-relay": "^4.0.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
     "get-graphql-schema": "^2.1.2",
     "graphql": "^14.3.1",
     "relay-compiler": "^4.0.0",
