--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "typescript": "^3.5.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.5",
     "@types/express": "^4.16.1",
     "@types/express-graphql": "^0.8.0",
     "@types/graphql": "^14.2.0",
