--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,11 @@
     "eslint": "^5.16.0",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.13.0",
     "get-graphql-schema": "^2.1.2",
     "graphql": "^14.3.1",
+    "prettier": "^1.17.1",
     "relay-compiler": "^4.0.0",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
