--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -19,8 +19,10 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react",
+        "prettier"
     ],
     "rules": {
+        "prettier/prettier": "error"
     }
 }
