--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,9 @@
     "express-graphql": "^0.8.0",
     "graphql": "^14.3.1",
     "graphql-relay": "^0.6.0",
+    "graphql-relay-subscription": "^0.2.1",
+    "graphql-subscriptions": "^1.1.0",
+    "subscriptions-transport-ws": "^0.9.16",
     "typescript": "^3.5.1"
   },
   "devDependencies": {
